--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,5 @@
 github: jayantkageri
 liberapay: jayantkageri
 patreon: jayantkageri
-custom: [links.jayantkageri.in/paypal, links.jayantkageri.in/ko-fi, links.jayantkageri.in/payu]
+ko_fi: jayantkageri
+custom: [links.jayantkageri.in/paypal, links.jayantkageri.in/payu]
