Add STRIPE Link

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@ github: jayantkageri
 liberapay: jayantkageri
 patreon: jayantkageri
 ko_fi: jayantkageri
-custom: [links.jayantkageri.in/paypal, links.jayantkageri.in/payu]
+custom: [links.jayantkageri.in/paypal, links.jayantkageri.in/stripe, links.jayantkageri.in/payu]
